[gd_scene load_steps=38 format=3 uid="uid://c1ktwdnahe6uo"]

[ext_resource type="Script" path="res://player.gd" id="1_p3e1t"]
[ext_resource type="Texture2D" uid="uid://decv1iyujjp83" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/climb/player-climb-1.png" id="2_5luaw"]
[ext_resource type="Texture2D" uid="uid://c0rtb5eg08t2" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/climb/player-climb-2.png" id="3_eyuby"]
[ext_resource type="Texture2D" uid="uid://pbjem4ocl27h" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/climb/player-climb-3.png" id="4_jq5t4"]
[ext_resource type="Texture2D" uid="uid://c1f7aeymox6r3" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/crouch/player-crouch-1.png" id="5_vust2"]
[ext_resource type="Texture2D" uid="uid://ceeum8onk5f40" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/crouch/player-crouch-2.png" id="6_3t8tx"]
[ext_resource type="Texture2D" uid="uid://lld8ot0o7gbx" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/hurt/player-hurt-1.png" id="7_i1rk5"]
[ext_resource type="Texture2D" uid="uid://sy7ou1pdq4rj" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/hurt/player-hurt-2.png" id="8_kkyeb"]
[ext_resource type="Texture2D" uid="uid://dqc3mn2ibr8qs" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/player-idle.png" id="9_mrjcf"]
[ext_resource type="Texture2D" uid="uid://u21tl43nqjm4" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-1.png" id="9_v2yfj"]
[ext_resource type="Texture2D" uid="uid://dqjkfjedibjf2" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-2.png" id="10_8src7"]
[ext_resource type="Texture2D" uid="uid://dmysh1nkb4cq7" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/jump/player-jump-1.png" id="10_sq042"]
[ext_resource type="Texture2D" uid="uid://dp6s8vobmnncw" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-3.png" id="11_nojmc"]
[ext_resource type="Texture2D" uid="uid://bkmwitw4yc1oy" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/jump/player-jump-2.png" id="11_uujne"]
[ext_resource type="Texture2D" uid="uid://doded4p6uft0i" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/run/player-run-1.png" id="12_2hbi7"]
[ext_resource type="Texture2D" uid="uid://c1ew6i3nrmufy" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-4.png" id="12_exgsy"]
[ext_resource type="Texture2D" uid="uid://d04rg154ylma2" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-5.png" id="13_7udue"]
[ext_resource type="Texture2D" uid="uid://bn68xegiaew8m" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/run/player-run-2.png" id="13_lsdeh"]
[ext_resource type="Texture2D" uid="uid://cr2aytrlumg3j" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-6.png" id="14_1n0vj"]
[ext_resource type="Texture2D" uid="uid://s8t3tmmke1yh" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/run/player-run-3.png" id="14_dgjxc"]
[ext_resource type="Texture2D" uid="uid://bia5kpytum3cj" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/run/player-run-4.png" id="15_61ycr"]
[ext_resource type="Texture2D" uid="uid://75rx86plussv" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/run/player-run-5.png" id="16_244w5"]
[ext_resource type="Texture2D" uid="uid://bnx4ssd4vhn8" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/player/run/player-run-6.png" id="17_va1pn"]
[ext_resource type="AudioStream" uid="uid://br5m8u1d4kwps" path="res://Game Sounds/jump.wav" id="18_f3byv"]
[ext_resource type="AudioStream" uid="uid://cdoy0eyvvhuh5" path="res://Game Sounds/death.wav" id="19_mmnew"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bglyo"]
radius = 7.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_brkyy"]
atlas = ExtResource("9_mrjcf")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw7b5"]
atlas = ExtResource("9_mrjcf")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dyj1"]
atlas = ExtResource("9_mrjcf")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6uv3"]
atlas = ExtResource("9_mrjcf")
region = Rect2(99, 0, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mjxw5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5luaw")
}, {
"duration": 1.0,
"texture": ExtResource("3_eyuby")
}, {
"duration": 1.0,
"texture": ExtResource("4_jq5t4")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vust2")
}, {
"duration": 1.0,
"texture": ExtResource("6_3t8tx")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_i1rk5")
}, {
"duration": 1.0,
"texture": ExtResource("8_kkyeb")
}, {
"duration": 1.0,
"texture": ExtResource("7_i1rk5")
}, {
"duration": 1.0,
"texture": ExtResource("8_kkyeb")
}, {
"duration": 1.0,
"texture": ExtResource("7_i1rk5")
}, {
"duration": 1.0,
"texture": ExtResource("8_kkyeb")
}, {
"duration": 1.0,
"texture": ExtResource("7_i1rk5")
}, {
"duration": 1.0,
"texture": ExtResource("9_v2yfj")
}, {
"duration": 1.0,
"texture": ExtResource("10_8src7")
}, {
"duration": 1.0,
"texture": ExtResource("11_nojmc")
}, {
"duration": 1.0,
"texture": ExtResource("12_exgsy")
}, {
"duration": 1.0,
"texture": ExtResource("13_7udue")
}, {
"duration": 1.0,
"texture": ExtResource("14_1n0vj")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_brkyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw7b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dyj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6uv3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_sq042")
}, {
"duration": 1.0,
"texture": ExtResource("11_uujne")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_2hbi7")
}, {
"duration": 1.0,
"texture": ExtResource("13_lsdeh")
}, {
"duration": 1.0,
"texture": ExtResource("14_dgjxc")
}, {
"duration": 1.0,
"texture": ExtResource("15_61ycr")
}, {
"duration": 1.0,
"texture": ExtResource("16_244w5")
}, {
"duration": 1.0,
"texture": ExtResource("17_va1pn")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3e1bq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}

[sub_resource type="Animation" id="Animation_mc3i4"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_scakv"]
resource_name = "idle"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_b6yea"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7pvp4"]
resource_name = "run"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"run", &"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ipf21"]
_data = {
"RESET": SubResource("Animation_3e1bq"),
"fall": SubResource("Animation_mc3i4"),
"idle": SubResource("Animation_scakv"),
"jump": SubResource("Animation_b6yea"),
"run": SubResource("Animation_7pvp4")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_p3e1t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_bglyo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_mjxw5")
animation = &"run"
frame = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 0)
offset = Vector2(0, -30)
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_smoothed = true
position_smoothing_speed = 1.0
drag_vertical_enabled = true
drag_top_margin = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_ipf21")
}

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_f3byv")
volume_db = -8.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_mmnew")

[node name="1Up" type="Label" parent="."]
offset_left = -10.0
offset_top = -25.0
offset_right = 30.0
offset_bottom = 1.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 0
text = "1 UP!"

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
